update the html file

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <input class="textinput" type="email" name="email" id="email" placeholder="Email address"
                                 required /><br />
                             <label for="textinput" class="label"></label>
-                            <textarea class="textinput_textarea" name="message" id="successMsg" cols="10" rows="5"
+                            <textarea class="textinput_textarea" name="message" id="message" cols="10" rows="5"
                                 placeholder="Write me something..." maxlength="500" required></textarea>
                         </div>
                         <div id="errorMessage"></div>
