--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </li>
             </ul>
         </div>
-        <script src="script.js">
+        <script src="popup.js">
         </script>
 </body>
 
