added hotel-hub application on my portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
-    <title>LifeSoft</title>
+    <title>Peter Dumbari</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-innercontainer">
-                <span class="nav-logo">LifeSoft</span>
+                <span class="nav-logo">Peter Dumbari</span>
                 <ul class="nav-items" id="nav-menu">
                     <li class="nav-link" id="navlink">
                         <a href="#portfolio" class="link active">Portfolio</a>
@@ -54,10 +54,12 @@
 
                 <ul class="icon-container">
                     <li class="icon_link">
-                        <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="image-icon" /></a>
+                        <a href="https://github.com/Peter-Dumbari"><img class="icon-image"
+                                src="./Assets/logos/Vector.png" alt="image-icon" /></a>
                     </li>
                     <li class="icon_link">
-                        <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="image-icon" /></a>
+                        <a href="https://www.linkedin.com/in/peterdumbari"><img class="icon-image"
+                                src="./Assets/logos/linkin.png" alt="image-icon" /></a>
                     </li>
                     <li class="icon_link">
                         <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="image-icon" /></a>
